--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h2>Look mama,I am using github.</h2>
+    <h1>I am learning web development.</h1>
+    <img src="flag.jpg" alt="">
 </body>
 </html>
