added some text

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>I am learning web development.</h1>
     <img src="flag.jpg" alt="">
     <p>Bangladesh</p>
+    <h2>This is the flag of Bangladesh and the proud of the people.</h2>
 </body>
 </html>
